gloo-all/70-rate-limiting/config/per-http-method-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: ceposta-gloo-demo-dns
      namespace: gloo-system      
    sniDomains:
    - ceposta-gloo-demo.solo.io    
  virtualHost:
    domains:
    - 'ceposta-gloo-demo.solo.io'
    routes:
    - matchers:
      - prefix: /httpbin
      routeAction:
        single:
          upstream:
            name: default-httpbin-8000 
            namespace: gloo-system     
      options:
        prefixRewrite: '/headers'             
        ratelimit:
          rateLimits:
            - actions:
                - remoteAddress: {}
            - actions:
                - requestHeaders:
                    descriptorKey: method
                    headerName: :method
                - remoteAddress: {}                                       
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-web-api-8080
            namespace: gloo-system
